fix(modal): fixed the modal to match the design on mobile and desktop.

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -35,7 +35,7 @@
   border-radius: 10px;
   position: relative;
   width: 430px;
-  min-height: 330px;
+  height: 330px;
 }
 
 .modal__close {
@@ -71,7 +71,7 @@
 .modal__form {
   display: flex;
   flex-direction: column;
-  margin-top: 54px;
+  margin-top: 60px;
 }
 
 .modal__input {
@@ -173,17 +173,22 @@
 @media screen and (max-width: 540px) {
   .modal__container {
     padding: 25px 22px;
+    width: 282px;
+    height: 322px;
   }
+
   .modal__close {
     width: 26px;
     height: 26px;
     left: calc(100% - 32px);
     bottom: calc(100% + 13px);
   }
+
   .modal__heading {
     font-size: 18px;
     margin-bottom: 50px;
   }
+
   .modal__button {
     font-size: 14px;
     line-height: 1.21;
